# News_letter_Embryo

./: .env.example  crawler.py  knowledge_graph.py  mailer.py  main.py  pyproject.toml  summarizer.py  test.ipynb
.github/workflows/: weekly_newsletter.yml
